added yml and updated instructions

--- a/01_Exploring_L2A_Reflectance/01_Exploring_EMIT_L2A_Reflectance.ipynb
+++ b/01_Exploring_L2A_Reflectance/01_Exploring_EMIT_L2A_Reflectance.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "**Background**\n",
     "\n",
-    "The EMIT instrument is an imaging spectrometer that measures light in visible and infrared wavelengths. These measurements display unique spectral signatures that correspond to the composition on the Earth's surface. The EMIT mission focuses specifically on mapping the composition of minerals to better understand the effects of mineral dust throughout the Earth system and human populations now and in the future. More details about EMIT and its associated products can be found in the [README.md](../README.md) and on the [EMIT website](https://earth.jpl.nasa.gov/emit/).\n",
+    "The EMIT instrument is an imaging spectrometer that measures light in visible and infrared wavelengths. These measurements display unique spectral signatures that correspond to the composition on the Earth's surface. The EMIT mission focuses specifically on mapping the composition of minerals to better understand the effects of mineral dust throughout the Earth system and human populations now and in the future. More details about EMIT and its associated products can be found in the **README.md** and on the [EMIT website](https://earth.jpl.nasa.gov/emit/).\n",
     "\n",
     "The L2A Reflectance Product contains estimated surface reflectance. Surface reflectance is the fraction of incoming solar radiation reflected Earth's surface. Different materials reflect different proportions of radiation based opon their chemical composition, meaning that this information can be used to determine the composition of a target. In this guide you will learn how to plot a layer from the L2A reflectance spatially and look at the spectral curve associated with individual pixels, which can be used to identify targets.\n",
     "\n",
@@ -21,8 +21,8 @@
     "Inside the `.netcdf` file there are 3 groups, the root group containing reflectance values accross the downtrack, crosstrack, and bands dimensions, the `sensor_band_parameters`  group containing the wavelength of each band center, and the full-width half maximum (FWHM) or bandwidth at half of the maximum amplitude, and the `location` group containing latitude and longitude values of each pixel as well as a geometric lookup table (GLT). The GLT is an orthorectified image that provides relative downtrack and crosstrack reference locations from the raw scene to facilitate fast projection of the dataset. \n",
     "\n",
     "**Requirements**  \n",
-    " - Set up Python Environment - See [README.md](../README.md) prerequisites section  \n",
-    " - Unzip the included EMIT data - See [README.md](../README.md) prerequisites section  \n",
+    " - Set up Python Environment - See **README.md** prerequisites section  \n",
+    " - Unzip the included EMIT data - See **README.md** prerequisites section  \n",
     "\n",
     "**Learning Objectives**  \n",
     "- How to open an EMIT `.nc` file as an `xarray.Dataset`\n",
@@ -55,8 +55,8 @@
     "import rasterio\n",
     "import rioxarray\n",
     "import geoviews as gv\n",
-    "import hvplot.xarray\n",
     "import holoviews as hv\n",
+    "import hvplot.xarray\n",
     "import netCDF4 as nc\n",
     "gv.extension('bokeh')"
    ]
@@ -515,7 +515,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.15 ('emit_test2')",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +533,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "6bd2ee2515370793b40cff1818ee95468b5cebfe727725540ea186fcad9fc650"
+    "hash": "1b003959cb24cdc0ff9ffb8cc5afe1d3f0b211ecc29a3e921aa7ae573be82b4b"
    }
   }
  },
