--- a/01_Exploring_L2A_Reflectance/01_Exploring_EMIT_L2A_Reflectance.ipynb
+++ b/01_Exploring_L2A_Reflectance/01_Exploring_EMIT_L2A_Reflectance.ipynb
@@ -50,10 +50,7 @@
    "source": [
     "import numpy as np\n",
     "import math\n",
-    "import pandas as pd\n",
     "import xarray as xr\n",
-    "import rasterio\n",
-    "import rioxarray\n",
     "import geoviews as gv\n",
     "import holoviews as hv\n",
     "import hvplot.xarray\n",
@@ -515,7 +512,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.15 ('emit_test2')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +530,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "1b003959cb24cdc0ff9ffb8cc5afe1d3f0b211ecc29a3e921aa7ae573be82b4b"
+    "hash": "cb8d6ef7ea13a085582cb7e4b48e010633bd06e5f11af03687bbcb0a79a813c9"
    }
   }
  },
