--- a/01_Exploring_L2A_Reflectance/01_Exploring_EMIT_L2A_Reflectance.ipynb
+++ b/01_Exploring_L2A_Reflectance/01_Exploring_EMIT_L2A_Reflectance.ipynb
@@ -8,21 +8,21 @@
     "\n",
     "**Summary**  \n",
     "\n",
-    "In this notebook we will open a NetCDF4 file from the Earth Surface Minteral Dust Source Investigation (EMIT), specifically the Level 2A (L2A) Reflectance product.  We will inspect the structure and plot the spectra of individual pixels and spatial coverage of a single scene. After that we will take advantage of the `holoviews streams` to build an interactive plot.\n",
+    "In this notebook we will open a netCDF4 file from the Earth Surface Minteral Dust Source Investigation (EMIT), specifically the Level 2A (L2A) Reflectance product. We will inspect the structure and plot the spectra of individual pixels and spatial coverage of a single scene. After that we will take advantage of the `holoviews streams` to build an interactive plot.\n",
     "\n",
     "**Background**\n",
     "\n",
     "The EMIT instrument is an imaging spectrometer that measures light in visible and infrared wavelengths. These measurements display unique spectral signatures that correspond to the composition on the Earth's surface. The EMIT mission focuses specifically on mapping the composition of minerals to better understand the effects of mineral dust throughout the Earth system and human populations now and in the future. More details about EMIT and its associated products can be found in the **README.md** and on the [EMIT website](https://earth.jpl.nasa.gov/emit/).\n",
     "\n",
-    "The L2A Reflectance Product contains estimated surface reflectance. Surface reflectance is the fraction of incoming solar radiation reflected Earth's surface. Different materials reflect different proportions of radiation based opon their chemical composition, meaning that this information can be used to determine the composition of a target. In this guide you will learn how to plot a layer from the L2A reflectance spatially and look at the spectral curve associated with individual pixels, which can be used to identify targets.\n",
+    "The L2A Reflectance Product contains estimated surface reflectance. Surface reflectance is the fraction of incoming solar radiation reflected Earth's surface. Different materials reflect different proportions of radiation based upon their chemical composition, meaning that this information can be used to determine the composition of a target. In this guide you will learn how to plot a layer from the L2A reflectance spatially and look at the spectral curve associated with individual pixels, which can be used to identify targets.\n",
     "\n",
     "**File Structure** \n",
     "\n",
-    "Inside the `.netcdf` file there are 3 groups, the root group containing reflectance values accross the downtrack, crosstrack, and bands dimensions, the `sensor_band_parameters`  group containing the wavelength of each band center, and the full-width half maximum (FWHM) or bandwidth at half of the maximum amplitude, and the `location` group containing latitude and longitude values of each pixel as well as a geometric lookup table (GLT). The GLT is an orthorectified image that provides relative downtrack and crosstrack reference locations from the raw scene to facilitate fast projection of the dataset. \n",
+    "Inside the netCDF4 file there are 3 groups, the root group containing reflectance values accross the downtrack, crosstrack, and bands dimensions, the `sensor_band_parameters`  group containing the wavelength of each band center, and the full-width half maximum (FWHM) or bandwidth at half of the maximum amplitude, and the `location` group containing latitude and longitude values of each pixel as well as a geometric lookup table (GLT). The GLT is an orthorectified image that provides relative downtrack and crosstrack reference locations from the raw scene to facilitate fast projection of the dataset. \n",
     "\n",
     "**Requirements**  \n",
     " - Set up Python Environment - See **README.md** prerequisites section  \n",
-    " - Unzip the included EMIT data - See **README.md** prerequisites section  \n",
+    " - Download the required EMIT data - See **README.md** prerequisites section  \n",
     "\n",
     "**Learning Objectives**  \n",
     "- How to open an EMIT `.nc` file as an `xarray.Dataset`\n",
@@ -48,14 +48,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from osgeo import gdal\n",
     "import numpy as np\n",
     "import math\n",
     "import xarray as xr\n",
     "import geoviews as gv\n",
     "import holoviews as hv\n",
     "import hvplot.xarray\n",
-    "import netCDF4 as nc\n",
-    "gv.extension('bokeh')"
+    "import netCDF4 as nc"
    ]
   },
   {
@@ -78,14 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Opening and Understanding the File Structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To read in the included `.nc` file we will use the `xarray` library, but first we want to look at the groups in the file using the `netcdf4` library. `xarray` datasets only supports non-hierarchical (flat) datasets. When loading a NetCDF into `xarray`, by default only the root group is added, the others have to be manually added. In the case of EMIT data, the root `reflectance` group only has reflectance values and some metadata. We will merge data into our `xarray.Dataset` from different groups as needed.  \n",
+    "To read in the `.nc` file we will use the `xarray` library, but first we want to look at the groups in the file using the `netcdf4` library. `xarray.Datasets` only support non-hierarchical (flat) datasets. When loading a NetCDF into an `xarray.Dataset`, by default only the root group is added, the others have to be manually added and the keys cannot be listed using that library. In the case of EMIT data, the `reflectance` group is the root group, and contains reflectance values and some metadata. We will merge data into our `xarray.Dataset` from different groups as needed in a later step. First we just want to explore and understand the heirarchical structure of the EMIT data. \n",
     "\n",
     "Start by using the `netcdf4` library to open the EMIT dataset."
    ]
@@ -139,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the information read in only contains the root variable (reflectance) and attributes metadata, not those from the groups we previously listed. Using those group names we can read the other groups into their own dataset. \n",
+    "We can see that the information read in only contains the root variable (reflectance) and attributes metadata, not those from the groups we previously listed. Using those group names we can read the other groups into their own `xarray` dataset object. \n",
     "\n",
     "Read in the `sensor_band_parameters` group as an `xarray` dataset and preview it."
    ]
@@ -254,7 +247,7 @@
    "source": [
     "### 1.4 Plotting the Spatial Data and Geometric Lookup Tables (GLT)\n",
     "\n",
-    "Find the band nearest the 650nm wavelength (red), then plot the data spatially using the `isel()` function to select only that band and using `hvplot.image()` to view the reflectance at 650nm of each pixel accross the acquired region."
+    "Find the band nearest the 650nm wavelength (red), then plot the data spatially using the `isel()` function to select only that band and using `hvplot.image()` to view the reflectance at 650nm of each pixel across the acquired region."
    ]
   },
   {
@@ -264,7 +257,7 @@
    "outputs": [],
    "source": [
     "b650 = np.nanargmin(abs(ds['wavelengths'].values-650)) # Find band nearest to value of 650 nm (red)\n",
-    "ds.isel(bands=b650).hvplot.image(cmap='viridis', aspect = 'equal') \n"
+    "ds.isel(bands=b650).hvplot.image(cmap='viridis', aspect = 'equal', rasterize=True) \n"
    ]
   },
   {
@@ -273,7 +266,7 @@
    "source": [
     "Note that the x and y axis are cross and downtrack, and offer little helpful positional information.\n",
     "\n",
-    "As previously mentioned a Geometry Lookup Table (GLT) is included in the `location` group of the NetCDF4 file. Applying the GLT will give us positional information. Read the data from the `location` group into an `xarray.Dataset`."
+    "As previously mentioned a Geometry Lookup Table (GLT) is included in the `location` group of the netCDF4 file. Applying the GLT will give us positional information. Read the data from the `location` group into an `xarray.Dataset`."
    ]
   },
   {
@@ -292,9 +285,9 @@
    "source": [
     "By inspecting the location group/dataset, we can see that each downtrack and crosstrack position has a latitude, longitude, and elevation, and the ortho_x and ortho_y data make up glt_x and glt_y arrays with a different shape. These arrays contain crosstrack and downtrack index values to quickly reproject the data. We will use these indexes to build an array of 2009x2353x285 (lat,lon,bands), filling it with the data from the EMIT dataset using the included Python module.\n",
     "\n",
-    "The output will be an `xarray.Dataset` with the reflectance reprojected to a Lat/Lon Grid. Import the `apply_glt_xarray` module and apply use the `apply_gltx()` function.\n",
+    "The output will be an `xarray.Dataset` with the reflectance reprojected to a Lat/Lon Grid. Import the `emit_tools` module and call use the help function to see how it can be used.\n",
     "\n",
-    "> Note: This does function does not currently work with the mask layers. \n"
+    "> Note: This function currently works with L1B Radiance and L2A Reflectance Data.\n"
    ]
   },
   {
@@ -303,8 +296,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import apply_glt_xarray as gltxr\n",
-    "ds_geo = gltxr.apply_gltx(fp)\n",
+    "import sys\n",
+    "sys.path.append('../modules/')\n",
+    "from emit_tools import emit_xarray\n",
+    "help(emit_xarray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the `emit_xarray` function will automatically apply the GLT to orthorectify the data unless `ortho  = False`. The function will also apply a mask if desired during construction of the output `xarray.Dataset`. \n",
+    "\n",
+    "Use the `emit_xarray` function to read in and orthorectify the L2A reflectance data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_geo = emit_xarray(fp)\n",
     "ds_geo"
    ]
   },
@@ -312,7 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now plot the georeferenced dataset. Be sure to use the `aspect = 'equal'` option to preserve the square pixel dimensions."
+    "Now plot the georeferenced dataset. Be sure to use the `aspect = 'equal'` option to preserve the square pixel dimensions. The `rasterize = True` will help save memory and reduces the size of this notebook. For higher quality outputs, this can be omitted."
    ]
   },
   {
@@ -321,7 +334,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_geo.isel(bands=b650).hvplot.image(cmap='viridis', aspect = 'equal', frame_width=500)"
+    "ds_geo.isel(bands=b650).hvplot.image(cmap='viridis', aspect = 'equal', frame_width=500, rasterize = True)"
    ]
   },
   {
@@ -353,14 +366,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_geo.sel(Longitude=-61.833,Latitude=-39.710,method='nearest').hvplot.line(y='reflectance',x='wavelengths', color='black', frame_width=400)"
+    "ds_geo.sel(longitude=-61.833,latitude=-39.710,method='nearest').hvplot.line(y='reflectance',x='wavelengths', color='black', frame_width=400)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.5 Exploring Spectral and Spatial Information Together\n",
+    "## 1.5 Writing an Orthorectified Output\n",
+    "\n",
+    "At this point, the `ds_geo` orthorectified EMIT data can also be written as a netCDF4 output that can be read using the `xarray.open_dataset` function, if desired. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_geo.to_netcdf('../data/geo_ds_out.nc')\n",
+    "# Example for Opening \n",
+    "# ds = xr.open_dataset('../data/geo_ds_out.nc')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.6 Exploring Spectral and Spatial Information Together\n",
     "\n",
     "Combining the Spatial and Spectral information into a single visualization can be a powerful tool for exploring and inspecting data quality. Using the Streams function of Holoviews we can link a spatial map to a plot of spectra.\n",
     "\n",
@@ -426,11 +459,11 @@
     "rgb = np.stack([r,g,b]) # Stack r,g,b arrays and assign NA's to 1 so they appear white in plots\n",
     "bds = np.array([0,1,2])\n",
     "# Pull lat and lon values from geocorrected arrays\n",
-    "x = ds_geo['Longitude'].values\n",
-    "y = ds_geo['Latitude'].values\n",
+    "x = ds_geo['longitude'].values\n",
+    "y = ds_geo['latitude'].values\n",
     "# Create new rgb xarray data array.\n",
-    "data_vars = {'RGB':(['bands','Latitude','Longitude'], rgb)} \n",
-    "coords = {'bands':(['bands'],bds), 'Latitude':(['Latitude'],y), 'Longitude':(['Longitude'],x)}\n",
+    "data_vars = {'RGB':(['bands','latitude','longitude'], rgb)} \n",
+    "coords = {'bands':(['bands'],bds), 'latitude':(['latitude'],y), 'longitude':(['longitude'],x)}\n",
     "attrs = ds_geo.attrs\n",
     "ds_rgb = xr.Dataset(data_vars=data_vars, coords=coords, attrs=attrs)\n",
     "ds_rgb"
@@ -450,7 +483,7 @@
    "outputs": [],
    "source": [
     "# Define RGB Image\n",
-    "map = ds_rgb.hvplot.rgb(x='Longitude', y='Latitude', bands='bands', aspect = 'equal', frame_width=400)"
+    "map = ds_rgb.hvplot.rgb(x='longitude', y='latitude', bands='bands', aspect = 'equal', frame_width=400)"
    ]
   },
   {
@@ -480,11 +513,11 @@
     "\n",
     "# Function to build a new spectral plot based on mouse hover positional information retrieved from the RGB image using our full reflectance dataset\n",
     "def point_spectra(x,y):\n",
-    "    return ds_geo.sel(Longitude=x,Latitude=y,method='nearest').hvplot.line(y='reflectance',x='wavelengths',\n",
+    "    return ds_geo.sel(longitude=x,latitude=y,method='nearest').hvplot.line(y='reflectance',x='wavelengths',\n",
     "                                                                           color='#1b9e77', frame_width=400)\n",
     "# Function to build spectral plot of clicked location to show on hover stream plot\n",
     "def click_spectra(x,y):\n",
-    "    return ds_geo.sel(Longitude=x,Latitude=y,method='nearest').hvplot.line(y='reflectance',x='wavelengths',\n",
+    "    return ds_geo.sel(longitude=x,latitude=y,method='nearest').hvplot.line(y='reflectance',x='wavelengths',\n",
     "                                                                           color='#d95f02', frame_width=400)\n",
     "# Define the Dynamic Maps\n",
     "point_dmap = hv.DynamicMap(point_spectra, streams=[posxy])\n",
@@ -504,7 +537,7 @@
     "Voice: +1-866-573-3222  \n",
     "Organization: Land Processes Distributed Active Archive Center (LP DAAC)¹  \n",
     "Website: <https://lpdaac.usgs.gov/>  \n",
-    "Date last modified: 11-21-2022  \n",
+    "Date last modified: 01-06-2022  \n",
     "\n",
     "¹Work performed under USGS contract G15PD00467 for NASA contract NNG14HH33I.  "
    ]
@@ -526,14 +559,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:41:22) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "cb8d6ef7ea13a085582cb7e4b48e010633bd06e5f11af03687bbcb0a79a813c9"
+    "hash": "3292b2aceff7d39327a7519422d4180a7c9b133202090f26e797e3dd8f2c7877"
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
